[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.0"
ic-cdk-macros = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
